Adding ZGC and removing sharedclasses